--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main">
         <h1>Merry Chrtistmas!</h1>
     <div class="item">
-    <img src="/img/House.png" height="275px">
+    <img src="img/House.png" height="275px">
     </div>
     <div class="container">
     <div class="container_items">
