--- a/wishes.html
+++ b/wishes.html
@@ -21,7 +21,7 @@
     </script>
 </head>
 <div id="loader" class="loader">
-    <img src="/img/jumping_cat.gif">
+    <img src="img/jumping_cat.gif">
 </div>
 <body onload="myFunction()">
     <div class="main">
